--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -113,6 +113,7 @@ jobs:
             sed -i 's|<FINERACT_DEFAULT_TENANTDB_NAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
             sed -i 's|<FINERACT_DEFAULT_TENANTDB_UID>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
             sed -i 's|<FINERACT_DEFAULT_TENANTDB_PWD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+            sed -i 's|<CONTAINER_PORT>|'"${{ secrets.CONTAINER_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
 
         # Deploy the Docker image to the GKE cluster
       - name: 'Deploy to K8S'
