--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -90,7 +90,7 @@ spec:
           - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
             value: "<FINERACT_HIKARI_DRIVER_CLASS_NAME>"
           - name: FINERACT_HIKARI_JDBC_URL
-            value: "<FINERACT_HIKARI_JDBC_URL>"
+            value: "jdbc:mysql://<FINERACT_DEFAULT_TENANTDB_HOSTNAME>:<FINERACT_DEFAULT_TENANTDB_PORT>/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'"
           - name: FINERACT_HIKARI_USERNAME
             value: "<FINERACT_HIKARI_USERNAME>"
 #            valueFrom:
