--- a/helm/fineract/templates/fineract-server-deployment.yaml
+++ b/helm/fineract/templates/fineract-server-deployment.yaml
@@ -29,8 +29,8 @@ spec:
   ports:
     - name: 443-8080
       protocol: TCP
-      port: <CONTAINER_PORT>
-      targetPort: <FINERACT_SERVER_PORT>
+      port: {{ .Values.fineract.spec.template.spec.containers.env.CONTAINER_PORT }}
+      targetPort: {{ .Values.fineract.spec.template.spec.containers.env.FINERACT_SERVER_PORT }}
   selector:
     app: fineract-server
 #    tier: backend
@@ -73,52 +73,52 @@ spec:
         livenessProbe:
           httpGet:
             path: /fineract-provider/actuator/health/liveness
-            port: <FINERACT_SERVER_PORT>
+            port: 8080
           initialDelaySeconds: 720
           periodSeconds: 1
         readinessProbe:
           httpGet:
             path: /fineract-provider/actuator/health/readiness
-            port: <FINERACT_SERVER_PORT>
+            port: 8080
           initialDelaySeconds: 360
           periodSeconds: 1
         env:
           - name: FINERACT_SERVER_PORT
-            value: <FINERACT_SERVER_PORT>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_SERVER_PORT }}"
           - name: FINERACT_NODE_ID
-            value: <FINERACT_NODE_ID>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_NODE_ID }}"
           - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
-            value: <FINERACT_HIKARI_DRIVER_CLASS_NAME>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_DRIVER_CLASS_NAME }}"
           - name: FINERACT_HIKARI_JDBC_URL
-            value: jdbc:mysql://<FINERACT_DEFAULT_TENANTDB_HOSTNAME>:<FINERACT_DEFAULT_TENANTDB_PORT>/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_JDBC_URL }}"
           - name: FINERACT_HIKARI_USERNAME
-            value: <FINERACT_HIKARI_USERNAME>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_USERNAME }}"
 #            valueFrom:
 #              secretKeyRef:
 #                name: fineract-tenants-db-secret
 #                key: username
           - name: FINERACT_HIKARI_PASSWORD
-            value: <FINERACT_HIKARI_PASSWORD>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_HIKARI_PASSWORD }}"
 #            valueFrom:
 #              secretKeyRef:
 #                name: fineract-tenants-db-secret
 #                key: password
           - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
-            value: <FINERACT_DEFAULT_TENANTDB_HOSTNAME>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}"
           - name: FINERACT_DEFAULT_TENANTDB_PORT
-            value: <FINERACT_DEFAULT_TENANTDB_PORT>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PORT }}"
           - name: FINERACT_DEFAULT_TENANTDB_IDENTIFIER
-            value: <FINERACT_DEFAULT_TENANTDB_IDENTIFIER>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}"
           - name: FINERACT_DEFAULT_TENANTDB_NAME
-            value: <FINERACT_DEFAULT_TENANTDB_NAME>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_NAME }}"
           - name: FINERACT_DEFAULT_TENANTDB_UID
-            value: <FINERACT_DEFAULT_TENANTDB_UID>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_UID }}"
 #            valueFrom:
 #              secretKeyRef:
 #                name: fineract-tenants-db-secret
 #                key: username
           - name: FINERACT_DEFAULT_TENANTDB_PWD
-            value: <FINERACT_DEFAULT_TENANTDB_PWD>
+            value: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PWD }}"
 #            valueFrom:
 #              secretKeyRef:
 #                name: fineract-tenants-db-secret
@@ -130,7 +130,7 @@ spec:
           - name: "FINERACT_SECURITY_OAUTH_ENABLED"
             value: 'false'
         ports:
-          - containerPort: <FINERACT_SERVER_PORT>
+          - containerPort: "{{ .Values.fineract.spec.template.spec.containers.env.FINERACT_SERVER_PORT }}"
             name: fineract-server
         lifecycle:
           preStop:
@@ -210,7 +210,7 @@ spec:
               service:
                 name: fineract-server
                 port: 
-                  number: <CONTAINER_PORT>
+                  number: {{ .Values.fineract.spec.template.spec.containers.env.CONTAINER_PORT }}
 {{- end }}
 ---
 apiVersion: v1
