fix: deployment manifest

--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -131,33 +131,33 @@ jobs:
                
           helm repo update
           
-          sed -i 's|<FINERACT_SERVER_PORT>|'"${{ secrets.FINERACT_SERVER_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_NODE_ID>|'"${{ secrets.FINERACT_NODE_ID }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_HIKARI_DRIVER_CLASS_NAME>|'"${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_HIKARI_JDBC_URL>|'"${{ secrets.FINERACT_HIKARI_JDBC_URL }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_HIKARI_USERNAME>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_HIKARI_PASSWORD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_DEFAULT_TENANTDB_HOSTNAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_DEFAULT_TENANTDB_PORT>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_DEFAULT_TENANTDB_IDENTIFIER>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_DEFAULT_TENANTDB_NAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_DEFAULT_TENANTDB_UID>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<FINERACT_DEFAULT_TENANTDB_PWD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
-          sed -i 's|<CONTAINER_PORT>|'"${{ secrets.CONTAINER_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_SERVER_PORT>|'"${{ secrets.FINERACT_SERVER_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_NODE_ID>|'"${{ secrets.FINERACT_NODE_ID }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_HIKARI_DRIVER_CLASS_NAME>|'"${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_HIKARI_JDBC_URL>|'"${{ secrets.FINERACT_HIKARI_JDBC_URL }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_HIKARI_USERNAME>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_HIKARI_PASSWORD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_DEFAULT_TENANTDB_HOSTNAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_DEFAULT_TENANTDB_PORT>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_DEFAULT_TENANTDB_IDENTIFIER>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_DEFAULT_TENANTDB_NAME>|'"${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_DEFAULT_TENANTDB_UID>|'"${{ secrets.FINERACT_HIKARI_USERNAME }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<FINERACT_DEFAULT_TENANTDB_PWD>|'"${{ secrets.FINERACT_HIKARI_PASSWORD }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
+#          sed -i 's|<CONTAINER_PORT>|'"${{ secrets.CONTAINER_PORT }}"'|g' helm/fineract/templates/fineract-server-deployment.yaml
 
           helm upgrade -f helm/fineract/Values.yaml ph-ee-backend helm/fineract/ \
-          --install --namespace ${{ secrets.NAMESPACE }} \
-          --set fineract.image=${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest \
-          --set fineract.spec.template.spec.containers.env.FINERACT_SERVER_PORT=${{ secrets.FINERACT_SERVER_PORT }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_NODE_ID=${{ secrets.FINERACT_NODE_ID }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_DRIVER_CLASS_NAME=${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_JDBC_URL=${{ secrets.FINERACT_HIKARI_JDBC_URL }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_HOSTNAME=${{ secrets.FINERACT_DEFAULT_TENANTDB_HOSTNAME }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PORT=${{ secrets.FINERACT_DEFAULT_TENANTDB_PORT }} \
-          --set fineract.spec.template.spec.containers.env.CONTAINER_PORT=${{ secrets.CONTAINER_PORT }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER=${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_NAME=${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_DEFAULT_TENANTDB_PWD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_PASSWORD=${{ secrets.FINERACT_HIKARI_PASSWORD }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_HIKARI_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }} \
-          --set fineract.spec.template.spec.containers.env.FINERACT_ADMIN_USERNAME=${{ secrets.FINERACT_HIKARI_USERNAME }}
+          --install --namespace "${{ secrets.NAMESPACE }}" \
+          --set fineract.image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
+          --set fineract.env.FINERACT_SERVER_PORT="${{ secrets.FINERACT_SERVER_PORT }}" \
+          --set fineract.env.FINERACT_NODE_ID="${{ secrets.FINERACT_NODE_ID }}" \
+          --set fineract.env.FINERACT_HIKARI_DRIVER_CLASS_NAME="${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }}" \
+          --set fineract.env.FINERACT_HIKARI_JDBC_URL="${{ secrets.FINERACT_HIKARI_JDBC_URL }}" \
+          --set fineract.env.FINERACT_DEFAULT_TENANTDB_HOSTNAME="${{ secrets.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}" \
+          --set fineract.env.FINERACT_DEFAULT_TENANTDB_PORT="${{ secrets.FINERACT_DEFAULT_TENANTDB_PORT }}" \
+          --set fineract.env.CONTAINER_PORT="${{ secrets.CONTAINER_PORT }}" \
+          --set fineract.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER="${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}" \
+          --set fineract.env.FINERACT_DEFAULT_TENANTDB_NAME="${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }}" \
+          --set fineract.env.FINERACT_DEFAULT_TENANTDB_PWD="${{ secrets.FINERACT_HIKARI_PASSWORD }}" \
+          --set fineract.env.FINERACT_HIKARI_PASSWORD="${{ secrets.FINERACT_HIKARI_PASSWORD }}" \
+          --set fineract.env.FINERACT_HIKARI_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
+          --set fineract.env.FINERACT_ADMIN_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}"
