--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -105,9 +105,8 @@ jobs:
                
           helm repo update
           
-          helm upgrade -f helm/fineract/Values.yaml ph-ee-backend helm/fineract/ \
-          --install --namespace "${{ secrets.NAMESPACE }}" \
-           --set fineract.image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
+          helm upgrade  
+           --set image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
            --set fineract.env.FINERACT_SERVER_PORT="${{ secrets.FINERACT_SERVER_PORT }}" \
            --set fineract.env.FINERACT_NODE_ID="${{ secrets.FINERACT_NODE_ID }}" \
            --set fineract.env.FINERACT_HIKARI_DRIVER_CLASS_NAME="${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }}" \
@@ -120,4 +119,6 @@ jobs:
            --set fineract.env.FINERACT_DEFAULT_TENANTDB_PWD="${{ secrets.FINERACT_HIKARI_PASSWORD }}" \
            --set fineract.env.FINERACT_HIKARI_PASSWORD="${{ secrets.FINERACT_HIKARI_PASSWORD }}" \
            --set fineract.env.FINERACT_HIKARI_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
-           --set fineract.env.FINERACT_ADMIN_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}"
+           --set fineract.env.FINERACT_ADMIN_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
+           ph-ee-backend helm/fineract/ \
+           --install --namespace "${{ secrets.NAMESPACE }}"
