--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -120,5 +120,5 @@ jobs:
            --set fineract.env.FINERACT_HIKARI_PASSWORD="${{ secrets.FINERACT_HIKARI_PASSWORD }}" \
            --set fineract.env.FINERACT_HIKARI_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
            --set fineract.env.FINERACT_ADMIN_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
-           -f helm/fineract/Values.yaml ph-ee-backend helm/fineract/ \
+           -f helm/values.yaml ph-ee-backend helm/ \
            --install --namespace "${{ secrets.NAMESPACE }}"
