--- a/fineract-helm/Chart.yaml
+++ b/fineract-helm/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 appVersion: "1.0.0"
 description: Fineract Engine
-name: fin-engine
+name: fineract-helm
 version: 1.0.0-SNAPSHOT
 #dependencies:
 #- name: mysql
