fix: deployment manifest

--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -94,7 +94,7 @@ jobs:
 
         # Deploy the Docker image to the GKE cluster
       - name: 'Deploy to K8S'
-        run: |
+        run: |-
 #          helm repo add camunda-platform https://helm.camunda.io
 #          helm repo add elastic http://helm.elastic.co
 #          helm repo add kibana http://helm.elastic.co
