--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -21,6 +21,7 @@ fineract:
     FINERACT_SERVER_PORT: 8080
     CONTAINER_PORT: 443
     FINERACT_NODE_ID: ''
+    FINERACT_DEFAULT_TENANTDB_UID: ""
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
     enabled: false
