--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -107,13 +107,13 @@ jobs:
           
           helm upgrade \
           --set fineract.image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
-          --set fineract.env.FINERACT_SERVER_PORT="${{ secrets.FINERACT_SERVER_PORT }}" \
+          --set fineract.env.FINERACT_SERVER_PORT=${{ secrets.FINERACT_SERVER_PORT }} \
           --set fineract.env.FINERACT_NODE_ID="${{ secrets.FINERACT_NODE_ID }}" \
           --set fineract.env.FINERACT_HIKARI_DRIVER_CLASS_NAME="${{ secrets.FINERACT_HIKARI_DRIVER_CLASS_NAME }}" \
           --set fineract.env.FINERACT_HIKARI_JDBC_URL="${{ secrets.FINERACT_HIKARI_JDBC_URL }}" \
           --set fineract.env.FINERACT_DEFAULT_TENANTDB_HOSTNAME="${{ secrets.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}" \
           --set fineract.env.FINERACT_DEFAULT_TENANTDB_PORT="${{ secrets.FINERACT_DEFAULT_TENANTDB_PORT }}" \
-          --set fineract.env.CONTAINER_PORT="${{ secrets.CONTAINER_PORT }}" \
+          --set fineract.env.CONTAINER_PORT=${{ secrets.CONTAINER_PORT }} \
           --set fineract.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER="${{ secrets.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}" \
           --set fineract.env.FINERACT_DEFAULT_TENANTDB_NAME="${{ secrets.FINERACT_DEFAULT_TENANTDB_NAME }}" \
           --set fineract.env.FINERACT_DEFAULT_TENANTDB_PWD="${{ secrets.FINERACT_HIKARI_PASSWORD }}" \
