--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -84,7 +84,7 @@ spec:
           periodSeconds: 1
         env:
           - name: FINERACT_SERVER_PORT
-            value: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
+            value: "{{ .Values.fineract.env.FINERACT_SERVER_PORT }}"
           - name: FINERACT_NODE_ID
             value: '{{ .Values.fineract.env.FINERACT_NODE_ID }}'
           - name: FINERACT_HIKARI_DRIVER_CLASS_NAME
@@ -106,7 +106,7 @@ spec:
           - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
             value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_HOSTNAME }}"
           - name: FINERACT_DEFAULT_TENANTDB_PORT
-            value: {{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_PORT }}
+            value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_PORT }}"
           - name: FINERACT_DEFAULT_TENANTDB_IDENTIFIER
             value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_IDENTIFIER }}"
           - name: FINERACT_DEFAULT_TENANTDB_NAME
