fix: deployment manifest

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -246,19 +246,19 @@ data:
 # domains:
 #  - api.vuna.io
 
-#---
-#apiVersion: v1
-#kind: Secret
-#metadata:
-#  name: ocirsecret
-#  annotations:
-#    meta.helm.sh/release-name: "ph-ee-backend"  # Adjust this as per your release name
-#    meta.helm.sh/release-namespace: "paymenthub-ns"  # Adjust this as per your namespace
-#  labels:
-#    app.kubernetes.io/managed-by: "Helm"
-#type: kubernetes.io/dockerconfigjson
-#data:
-#  .dockerconfigjson: >-
-#    eyJhdXRocyI6eyJsaHIub2Npc...
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: ocirsecret
+  annotations:
+    meta.helm.sh/release-name: "ph-ee-backend"  # Adjust this as per your release name
+    meta.helm.sh/release-namespace: "paymenthub-ns"  # Adjust this as per your namespace
+  labels:
+    app.kubernetes.io/managed-by: "Helm"
+type: kubernetes.io/dockerconfigjson
+data:
+  .dockerconfigjson: >-
+    eyJhdXRocyI6eyJsaHIub2Npc...
 
 {{- end }}
