--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -25,14 +25,14 @@ fineract.security.basicauth.enabled=${FINERACT_SECURITY_BASICAUTH_ENABLED:true}
 fineract.security.oauth.enabled=${FINERACT_SECURITY_OAUTH_ENABLED:false}
 fineract.security.2fa.enabled=${FINERACT_SECURITY_2FA_ENABLED:false}
 
-fineract.tenant.host=${FINERACT_DEFAULT_TENANTDB_HOSTNAME:localhost}
-fineract.tenant.port=${FINERACT_DEFAULT_TENANTDB_PORT:3306}
-fineract.tenant.username=${FINERACT_DEFAULT_TENANTDB_UID:root}
-fineract.tenant.password=${FINERACT_DEFAULT_TENANTDB_PWD:mysql}
-fineract.tenant.parameters=${FINERACT_DEFAULT_TENANTDB_CONN_PARAMS:}
+fineract.tenant.host=${FINERACT_DEFAULT_TENANTDB_HOSTNAME}
+fineract.tenant.port=${FINERACT_DEFAULT_TENANTDB_PORT}
+fineract.tenant.username=${FINERACT_DEFAULT_TENANTDB_UID}
+fineract.tenant.password=${FINERACT_DEFAULT_TENANTDB_PWD}
+fineract.tenant.parameters=${FINERACT_DEFAULT_TENANTDB_CONN_PARAMS}
 fineract.tenant.timezone=${FINERACT_DEFAULT_TENANTDB_TIMEZONE:Africa/Nairobi}
-fineract.tenant.identifier=${FINERACT_DEFAULT_TENANTDB_IDENTIFIER:default}
-fineract.tenant.name=${FINERACT_DEFAULT_TENANTDB_NAME:fineract_default}
+fineract.tenant.identifier=${FINERACT_DEFAULT_TENANTDB_IDENTIFIER}
+fineract.tenant.name=${FINERACT_DEFAULT_TENANTDB_NAME}
 fineract.tenant.description=${FINERACT_DEFAULT_TENANTDB_DESCRIPTION:Default Demo Tenant}
 fineract.tenant.master-password=${FINERACT_DEFAULT_TENANTDB_MASTER_PASSWORD:fineract}
 fineract.tenant.encrytion=${FINERACT_DEFAULT_TENANTDB_ENCRYPTION:"AES/CBC/PKCS5Padding"}
@@ -356,10 +356,10 @@ server.tomcat.threads.min-spare=${FINERACT_SERVER_TOMCAT_THREADS_MIN_SPARE:10}
 # OAuth authorisation server endpoint
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${FINERACT_SERVER_OAUTH_RESOURCE_URL:http://localhost:9000/auth/realms/fineract}
 
-spring.datasource.hikari.driverClassName=${FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME:com.mysql.cj.jdbc.Driver}
-spring.datasource.hikari.jdbcUrl=${FINERACT_HIKARI_JDBC_URL:jdbc:mysql://127.0.0.1:3306/fineract_tenants?useUnicode=true&characterEncoding=utf8&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&sessionVariables=time_zone='-00:00'}
-spring.datasource.hikari.username=${FINERACT_HIKARI_USERNAME:root}
-spring.datasource.hikari.password=${FINERACT_HIKARI_PASSWORD:mysql}
+spring.datasource.hikari.driverClassName=${FINERACT_HIKARI_DRIVER_SOURCE_CLASS_NAME}
+spring.datasource.hikari.jdbcUrl=${FINERACT_HIKARI_JDBC_URL}
+spring.datasource.hikari.username=${FINERACT_HIKARI_USERNAME}
+spring.datasource.hikari.password=${FINERACT_HIKARI_PASSWORD}
 spring.datasource.hikari.minimumIdle=${FINERACT_HIKARI_MINIMUM_IDLE:3}
 spring.datasource.hikari.maximumPoolSize=${FINERACT_HIKARI_MAXIMUM_POOL_SIZE:10}
 spring.datasource.hikari.idleTimeout=${FINERACT_HIKARI_IDLE_TIMEOUT:60000}
